--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="es">
     <head>
+        <meta content="Esta es mi primera página web" name="description" />
+        <meta property="og:title" content="Mi primera Web" />
+        <meta property="og:description" content="Estes es el detalle de mi pagina web" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="https://www.oecd.org/media/oecdorg/satellitesites/grs/flag%20of%20peru.png" />
         <title> Javier Cruces </title>
 
     </head>
