--- a/Semana4/index.html
+++ b/Semana4/index.html
@@ -72,7 +72,7 @@
           <div class="challenges-container flex items-center">
             <div class="challenges flex pt-30">
               <div class="card shadow">
-                <img src="./images/challenges/challenge-1.png" alt="" />
+                <img src="./images/challenges/reto-1.png" alt="" />
                 <div class="card-body">
                   <h3>How did we do?</h3>
                   <p>Reto de FrontEnd mentor BASIC</p>
@@ -80,7 +80,7 @@
                 </div>
               </div>
               <div class="card shadow">
-                <img src="./images/challenges/challenge-2.png" alt="" />
+                <img src="./images/challenges/reto-2.png" alt="" />
                 <div class="card-body">
                   <h3>Challenge QR</h3>
                   <p>Reto de FrontEnd mentor BASIC</p>
@@ -88,15 +88,23 @@
                 </div>
               </div>
               <div class="card shadow">
-                <img src="./images/challenges/challenge-3.png" alt="" />
+                <img src="./images/challenges/reto-3.png" alt="" />
                 <div class="card-body">
-                  <h3>Github search</h3>
+                  <h3>Etherium NFT Card</h3>
                   <p>Reto de FrontEnd mentor BASIC</p>
                   <a href="">Ver repositorio</a>
                 </div>
               </div>
               <div class="card shadow">
-                <img src="./images/challenges/challenge-4.png" alt="" />
+                <img src="./images/challenges//reto-4.png" alt="" />
+                <div class="card-body">
+                  <h3>GitHub Search</h3>
+                  <p>Reto de FrontEnd mentor BASIC</p>
+                  <a href="">Ver repositorio</a>
+                </div>
+              </div>
+              <div class="card shadow">
+                <img src="./images/challenges//reto-5.png" alt="" />
                 <div class="card-body">
                   <h3>Landing page</h3>
                   <p>Reto de FrontEnd mentor BASIC</p>
