--- a/Semana5/objetos2/index.html
+++ b/Semana5/objetos2/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./objetos.js" defer></script>
+    <script src="./objetos2.js" defer></script>
 </head>
-<div>
-    <h1>objetos</h1>    
-</div>
+<body>
+    <h1>Hola Mundo</h1>
+</body>
 </html>
