--- a/Semana6/iteradores/iteradores.html
+++ b/Semana6/iteradores/iteradores.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./iteradores.js" defer></script>
     <title>Document</title>
-    <script src="./objetos.js" defer></script>
 </head>
-<div>
-    <h1>objetos</h1>    
-</div>
+<body>
+    <h1>Iteradores</h1>
+</body>
 </html>
