aprendiendo js y boostrap

--- a/Semana7/Reto9/reto9.html
+++ b/Semana7/Reto9/reto9.html
@@ -9,12 +9,16 @@
     <script src="./reto9.js" defer></script>
 </head>
 <body>
-    <h1>Raza de perritos</h1>
+    <button id="btn-close" style="display: none">Cerrar</button>
+    <div class="gallery-result" style="display: none"></div>
+    <main>
+        <h1>Raza de perritos</h1>
     <div>
         <select name="" id="select-breed">
             <option selected value="" disabled>Escoje una raza</option>
         </select>
     </div>
     <div class="gallery"></div>
+    </main>
 </body>
 </html>
