Lista de producto con fetch, async await y forEach

--- a/Semana7/reto11/index.html
+++ b/Semana7/reto11/index.html
@@ -34,13 +34,14 @@
                                 placeholder="Escribe tu tarea">    
                             </div>
                             <div class=col-md-4 col-12 d-grid>
-                                <button id="enviar-text" type="summit"> Enviar </button>
+                                <button id="enviar-text" type="summit" style="background-color: rgb(113, 210, 240); width: 300px; height: 38px; border-radius: 20px"> Enviar </button>
                             </div>
                         </div>
                     </form>
             </div>
             <div id="list-tasks">
-
+              <h2 style="padding-left: 20px; margin-top: 20px;">Listado de tareas pendientes</h2>
+              <div class="tasks"></div>
             </div>
         </div>
     </main>
