--- a/Semana7/reto11/index2.html
+++ b/Semana7/reto11/index2.html
@@ -11,7 +11,6 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./src/index.css" />
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -22,12 +21,7 @@
     <script src="./src/index.js" defer></script>
   </head>
   <body>
-    <div class="backdrop-container">
-      <div class="backdrop">
-        <span class="loader"></span>
-      </div>
-    </div>
-    <main class="container pt-5">
+    <main class="container mt-5">
       <div class="card">
         <div class="card-body">
           <h3>Crear tarea</h3>
